<resources>
    <string name="app_name">AboutMe</string>
    <string name="myName">maYuL</string>
    <string name="starImageDesc">this is a star Image</string>
    <string name="scrollViewText">在 Android 开发中，dp（密度无关像素）和sp（比例无关像素）是用于定义不同屏幕密度和用户设置的尺寸和布局的单位。它们的区别如下： dp（密度独立像素）： 用于定义在不同屏幕密度下保持一致的尺寸和布局。 dp确保您的 UI 元素在不同密度的屏幕上具有相同的物理尺寸。 它对于指定边距、填充和文本大小等尺寸很有用，以便在各种设备上保持一致的外观。 sp（与尺度无关的像素）： 专门用于文本大小。 sp类似于dp但也尊重用户的字体大小偏好（即可访问性设置）。 这意味着定义的文本大小sp可以根据用户的喜好进行缩放，这对于可访问性尤为重要。 总之，使用dp一般布局尺寸和sp文本大小来确保您的应用程序在视觉上一致且易于访问。在 Android 开发中，dp（密度无关像素）和sp（比例无关像素）是用于定义不同屏幕密度和用户设置的尺寸和布局的单位。它们的区别如下： dp（密度独立像素）： 用于定义在不同屏幕密度下保持一致的尺寸和布局。 dp确保您的 UI 元素在不同密度的屏幕上具有相同的物理尺寸。 它对于指定边距、填充和文本大小等尺寸很有用，以便在各种设备上保持一致的外观。 sp（与尺度无关的像素）： 专门用于文本大小。 sp类似于dp但也尊重用户的字体大小偏好（即可访问性设置）。 这意味着定义的文本大小sp可以根据用户的喜好进行缩放，这对于可访问性尤为重要。 总之，使用dp一般布局尺寸和sp文本大小来确保您的应用程序在视觉上一致且易于访问。在 Android 开发中，dp（密度无关像素）和sp（比例无关像素）是用于定义不同屏幕密度和用户设置的尺寸和布局的单位。它们的区别如下： dp（密度独立像素）： 用于定义在不同屏幕密度下保持一致的尺寸和布局。 dp确保您的 UI 元素在不同密度的屏幕上具有相同的物理尺寸。 它对于指定边距、填充和文本大小等尺寸很有用，以便在各种设备上保持一致的外观。 sp（与尺度无关的像素）： 专门用于文本大小。 sp类似于dp但也尊重用户的字体大小偏好（即可访问性设置）。 这意味着定义的文本大小sp可以根据用户的喜好进行缩放，这对于可访问性尤为重要。 总之，使用dp一般布局尺寸和sp文本大小来确保您的应用程序在视觉上一致且易于访问。在 Android 开发中，dp（密度无关像素）和sp（比例无关像素）是用于定义不同屏幕密度和用户设置的尺寸和布局的单位。它们的区别如下： dp（密度独立像素）： 用于定义在不同屏幕密度下保持一致的尺寸和布局。 dp确保您的 UI 元素在不同密度的屏幕上具有相同的物理尺寸。 它对于指定边距、填充和文本大小等尺寸很有用，以便在各种设备上保持一致的外观。 sp（与尺度无关的像素）： 专门用于文本大小。 sp类似于dp但也尊重用户的字体大小偏好（即可访问性设置）。 这意味着定义的文本大小sp可以根据用户的喜好进行缩放，这对于可访问性尤为重要。 总之，使用dp一般布局尺寸和sp文本大小来确保您的应用程序在视觉上一致且易于访问。在 Android 开发中，dp（密度无关像素）和sp（比例无关像素）是用于定义不同屏幕密度和用户设置的尺寸和布局的单位。它们的区别如下： dp（密度独立像素）： 用于定义在不同屏幕密度下保持一致的尺寸和布局。 dp确保您的 UI 元素在不同密度的屏幕上具有相同的物理尺寸。 它对于指定边距、填充和文本大小等尺寸很有用，以便在各种设备上保持一致的外观。 sp（与尺度无关的像素）： 专门用于文本大小。 sp类似于dp但也尊重用户的字体大小偏好（即可访问性设置）。 这意味着定义的文本大小sp可以根据用户的喜好进行缩放，这对于可访问性尤为重要。 总之，使用dp一般布局尺寸和sp文本大小来确保您的应用程序在视觉上一致且易于访问。</string>
    <string name="what_is_your_name">what is your name?</string>
    <string name="done">Done</string>
    <string name="hello">hello</string>
</resources>